--- a/index.html
+++ b/index.html
@@ -3,44 +3,105 @@
   <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Rouge+Script" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Sacramento" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Noto+Sans+TC" rel="stylesheet">
     <meta charset="utf-8">
-    <title>Website</title>
+    <title>C.Romeo's website</title>
   </head>
   <body id="body">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#body">Home</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Details</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#skills">Skills</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#">Contacts</a>
-      </li>
-    </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
+
+    <div class="div_navbar">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+          <div class="container d-flex flex-column flex-md-row justify-content-between">
+        <a class="navbar-brand" href="#body">Home</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Details</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#div_skills">Skills</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link disabled" href="#div_contacts">Contacts</a>
+            </li>
+          </ul>
+          <form class="form-inline my-2 my-lg-0">
+            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>
+          </form>
+        </div>
+        </div>
+      </nav>
+    </div>
+
+  <div class="div_title">
+    <section id="title-section" class="jumbotron text-center">
+      <div class="container" id="title-container">
+        <h1 id="title_name" class="jumbotron-heading">Claudia Romeo</h1>
+        <p class="lead text-muted">Computer engineer</p>
+      </div>
+    </section>
   </div>
-</nav>
 
-<section id="title-section" class="jumbotron text-center">
-  <div class="container" id="title-container">
-    <h1 class="jumbotron-heading">Claudia Romeo</h1>
-    <p class="lead text-muted">Computer engineer</p>
-  </div>
-</section>
+    <div class="container" id="div_skills">
+      <div class="title custom_title">
+        <h3 id="skills_title">Skills</h3>
+      </div>
+      <div class="row">
 
-<div class="container">
-  <h3 id="skills">Skills</h3>
-</div>
+          <div class="col-sm">
+            <div class="card" style="width: 18rem;">
+              <img class="card-img-top" src="./img/image_cap.svg" alt="Card image cap">
+              <div class="card-body">
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              </div>
+            </div>
+          </div>
 
+          <div class="col-sm">
+            <div class="card" style="width: 18rem;">
+              <img class="card-img-top" src="./img/image_cap.svg" alt="Card image cap">
+              <div class="card-body">
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-sm">
+            <div class="card" style="width: 18rem;">
+              <img class="card-img-top" src="./img/image_cap.svg" alt="Card image cap">
+              <div class="card-body">
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              </div>
+            </div>
+          </div>
+
+    </div>
+    </div>
+    <div class="" id="div_contacts">
+        <div class="container" >
+          <div class="title custom_title">
+            <h3 id="contacts">Contacts</h3>
+          </div>
+          <div id="div_footer" class="container">
+            <dl class="row">
+                <dd class="col-sm-3">LinkedIn:</dd>
+                <dd class="col-sm-9"><a href="https://www.linkedin.com/in/claudia-romeo-b28008102">LinkedIn</a></dd>
+                <dd class="col-sm-3">Email:</dd>
+                <dd class="col-sm-9"><a href="mailto:cla.romeo9@gmail.com" target="_top">cla.romeo9@gmail.com</a></dd>
+                <dd class="col-sm-3">Github:</dd>
+                <dd class="col-sm-9"><a href="">Github</a></dd>
+                <dd class="col-sm-3">Curriculum Vitae: </dd>
+                <dd class="col-sm-9"><a href="https://drive.google.com/open?id=1RXXpCNgaSkNgkmHpmHfvcuDPy5_W-yJO">Open cv</a></dd>
+              </dl>
+          </div>
+        </div>
+    </div>
   </body>
+
 </html>
